--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -178,16 +178,16 @@ body {
 
 .navbar {
     position: fixed;
-    margin: 10px;
     background-color: darkblue;
     z-index: 998;
+    align-self: center;
 }
 
 nav {
     display: flex;
     align-items: center;
-    margin: 20px;
     color: white;
+    padding: 20px;
 }
 
 nav a {
@@ -203,6 +203,7 @@ nav a:hover {
 
 .logo {
     display: flex;
+    margin-left: 45px;
 }
 
 .TopContent {
@@ -272,4 +273,53 @@ footer {
 
 hr {
     margin: 30px 0px;
+}
+
+.sectionone h1 {
+    font-size: 28px;
+    margin: 20px 0px;
+}
+
+.sectionone img {
+    margin: 20px;
+}
+
+.boxsection {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.box {
+    width: 45%;
+    height: 25%;
+    border: 1px solid black;
+    background-color: lightgray;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 20px;
+    margin: 20px;
+}
+
+.box a {
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 180px;
+    height: 30px;
+    text-decoration: none;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px;
+}
+
+.sectiontwo {
+    display: flex;
+}
+
+.facts li {
+    list-style: square;
+    margin: 20px;
 }
