Strech Goal Extra Page

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -340,3 +340,9 @@ hr {
     display: flex;
     justify-content: space-around;
 }
+
+.nasaimage {
+    height: 200px;
+    width: 900px;
+    background-image: url("https://apod.nasa.gov/apod/image/1909/McloudsCarina_Hubble_1397.jpg");
+}
